# tuya-python-app

./: .gitignore  README.md  cSpell.json  devices.json  pyproject.toml
tuya_python/: device.py  main.py  test.py  tuya.py
