[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tuya-python-app"
version = "2023.12.16"
readme = "README.md"
dependencies = [
    "requests>=2.31.0",
    "typer>=0.9.0",
    "tomlkit>=0.12.3",
    "tinytuya",
]

[tool.pyright]
typeCheckingMode = "off"

[project.scripts]
tuya = "tuya_python.main:app"
